--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,19 @@ configurations {
     //     description = "maxim configration"
     // }
     // configurationImpl.extendsFrom(maxim)
+    // all {
+    //     resolutionStrategy {
+    //         force("org.springframework:spring-aop:5.3.8")
+    //     }
+    // }
 }
 
 dependencies {
+    // compileOnly platform('org.springframework.boot:spring-boot-dependencies:2.5.3')
     // add('implementation', [group: "org.springframework", name: "spring-webmvc", version: '5.3.9'])
     // maxim "org.springframework:spring-webmvc:5.3.9"
     implementation ("org.springframework:spring-webmvc:5.3.9") {
-        exclude(group: 'org.springframework', module: 'spring-aop')
+        // exclude(group: 'org.springframework', module: 'spring-aop')
     }
     compileOnly 'org.projectlombok:lombok:1.18.28'
 
